fixed scrolling issue on site, added social media links in the bottom of home page in a partial view, fixed the review text overlapping the navbar

--- a/MEG_Boosting_Site/wwwroot/css/site.css
+++ b/MEG_Boosting_Site/wwwroot/css/site.css
@@ -3,6 +3,9 @@ for details on configuring this project to bundle and minify static web assets. 
 .navbar-custom{
   background-color: #5a5d66;
   background-image: linear-gradient(#000000, #001b44);
+  z-index: 500;
+  position: absolute;
+  width: 100%;
 }
 
 a.navbar-brand {
@@ -84,7 +87,7 @@ body {
 /* Style page content */
 .main {
   margin-left: 180px; /* Same as the width of the sidebar */
-  padding: 0px 10px;
+  padding: 150px 10px;
 }
 
 .float-container {
@@ -95,4 +98,10 @@ body {
   width: 20%;
   float: left;
   padding: 11px;
+}
+
+.socialmedia {
+  width: 25%;
+  position: center;
+  text-align: center;
 }
